XP-1938 XP Admin - Prefix common css styles * Renamed picker mixins * Fixed calendar icon not showing for date and date/time pickers

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/time/date-time-picker.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/time/date-time-picker.less
@@ -10,11 +10,12 @@
 
       .notSelectable();
 
-      .date-picker-dialog(auto, 10px);
+      .date-picker-mixin(auto, 10px);
 
-      .time-picker-dialog();
+      .time-picker-mixin();
 
-      .date-picker-dialog, .time-picker-dialog {
+      .date-picker-dialog,
+      .time-picker-dialog {
         display: inline-block;
         position: static;
         vertical-align: middle;
